correcciones en controllers
