# src/controllers/postController.js
@@ -1,4 +1,4 @@
-const { Post, Comment, Archive, Tag } = require("../models");
+const { Post, Comment, Archive, Tag, User } = require("../models");
 const { redisClient }  = require('../config/redisClient')
 const { getModelByIdCache, getModelsCache, deleteModelsCache, deleteModelByIdCache } = require("./genericController")
 
@@ -10,7 +10,7 @@ const getPosts = async (_, res) => {
 };
 
 const getPostById = async (req, res) => {
-    const cached = getModelByIdCache(Post, req.params.id)   //Intenta obtener el post del cache
+    const cached = await getModelByIdCache(Post, req.params.id)   //Intenta obtener el post del cache
     const post = cached ? JSON.parse(cached) : await Post.findById(req.params.id);  //Si no está en el cache, lo busca en la base de datos
     await redisClient.set(`post:${req.params.id}`, JSON.stringify(post), { EX: 300 })  // Guarda el post en el cache con una expiración de 300 segundos
     res.status(200).json(post);
@@ -18,14 +18,16 @@ const getPostById = async (req, res) => {
 
 const createPost = async (req, res) => {
     const post = await Post.create(req.body);
-    deleteModelsCache(Post) // Elimina el cache de todos los posts, ya que se ha creado uno nuevo por ende el cache esta desactualizado
+    const { userId } = req.body;
+    await User.findByIdAndUpdate(userId, { $push: { posts: post._id } }, { new: true }); // Agrega el post al usuario
+    await deleteModelsCache(Post) // Elimina el cache de todos los posts, ya que se ha creado uno nuevo por ende el cache esta desactualizado
     res.status(201).json(post);
 };
 
 const updatePostById = async (req, res) => {
     await Post.findByIdAndUpdate(req.params.id, req.body, {new: true})
-    deleteModelByIdCache(Post, req.params.id) 
-    deleteModelsCache(Post) // Borro ambos caches, el de un post en particular y el de todos los posts para garantizar que la información sea borrada
+    await deleteModelByIdCache(Post, req.params.id) 
+    await deleteModelsCache(Post) // Borro ambos caches, el de un post en particular y el de todos los posts para garantizar que la información sea borrada
     res.status(200).json({ message: "Post actualizado correctamente" }); 
 };
 
@@ -35,8 +37,8 @@ const deletePostById = async (req, res) => {
     await Comment.deleteMany({ post: postId });
     await Tag.deleteMany({ post: postId });
     await Post.findByIdAndDelete(postId);
-    deleteModelByIdCache(Post, postId);
-    deleteModelsCache(Post); // Lo mismo que en update
+    await deleteModelByIdCache(Post, postId);
+    await deleteModelsCache(Post); // Lo mismo que en update
     res.status(200).json({ message: "Post eliminado correctamente" });
 };
 
